<resources>
    <string name="app_name">DroidDiabetibookOnline</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SingUP">Sing Up</string>
    <string name="LogIn">Log In</string>
    <string name="hintName">Full name</string>
    <string name="hintAge">Age</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="tologIn">Do you already have an account?\nClick here and Log In</string>
    <string name="toRegister">Don\'t you have an account?\nClick here and Sign Up</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="LogOut">Log out</string>
    <string name="HelpMe">Do you need help?</string>
    <string name="List_string">List</string>
    <string name="Home_string">Home</string>
    <string name="Graph_string">Graph</string>


</resources>
