<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUpSingInFragments.LogIn">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/marginHome"
        android:layout_marginBottom="@dimen/marginHome"
        android:layout_marginEnd="@dimen/marginHome"
        android:layout_marginStart="@dimen/marginHome"
        android:layout_marginTop="@dimen/marginHome"
        card_view:cardBackgroundColor="@color/BckGrndCardView"
        card_view:cardCornerRadius="@dimen/CardviewCornerRadius"
        card_view:cardMaxElevation="@dimen/cardview_compat_inset_shadow"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/marginHome"
                android:layout_marginEnd="@dimen/marginHome"
                android:layout_marginStart="@dimen/marginHome"
                android:layout_marginTop="@dimen/marginHome"
                android:orientation="vertical"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent">


                <android.support.design.widget.TextInputLayout
                    style="@style/inputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/logIn_email"
                        style="@style/EditTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintEmail" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    style="@style/inputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/logIn_password"
                        style="@style/EditTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintPassword" />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/logIn_button"
                    style="@style/ButtonHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_login_register"
                    android:text="@string/LogIn" />

                <TextView
                    style="@style/textViewFPsw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgotPassword" />

                <TextView
                    android:id="@+id/passToRegister"
                    style="@style/TextViewHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/toRegister" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_margin="@dimen/marginHome"
                        android:contentDescription="Blood Drop Icon"
                        android:src="@drawable/blood_icon"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                </LinearLayout>

            </LinearLayout>


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>